--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,7 @@ gunicorn = "*"
 psycopg2-binary = "*"
 dj-database-url = "*"
 whitenoise = "*"
+django-bootstrap4 = "*"
 
 [requires]
 python_version = "3.7"
