--- a/Pipfile
+++ b/Pipfile
@@ -6,12 +6,13 @@ verify_ssl = true
 [dev-packages]
 
 [packages]
-django = "*"
+django = "==3.0.7"
 gunicorn = "*"
 psycopg2-binary = "*"
 dj-database-url = "*"
-whitenoise = "*"
+whitenoise = "==5.1.0"
 django-bootstrap4 = "*"
+setuptools = "==47.1.1"
 
 [requires]
 python_version = "3.7"
